# Lois

./: README.md
Lab_1/: main.py  main_functions.py
Lab_1/Inputs/: input.txt  operation.txt  premise.txt
Lab_1/Service/: checks.py  functions.py  service.py
Lab_2/: functions.py  input  main.py  output
lois2/: CMakeLists.txt  file.py  functions.py  menu.py
lois2/examples/: example_1.txt  example_2.txt  example_3.txt  example_4.txt  example_5.txt  example_6.txt
lois2/resources/: input.txt  output.txt
lois2/src/: fuzzy_set_types.cpp  fuzzy_set_types.h  main.cpp
